--- a/Exercises/02 Modifying Content/index.html
+++ b/Exercises/02 Modifying Content/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
-  <script src="app.js"></script>
-</body>
+  <head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <ul class="lista">
+        <li>Element1</li>
+        <li>Element2</li>
+        <li>Element3</li>
+      </ul>
+    </div>
+    <script src="app.js"></script>
+  </body>
 </html>
