--- a/Exercises/03 Modifying Attributes/index.html
+++ b/Exercises/03 Modifying Attributes/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
-  <script src="app.js"></script>
-</body>
+  <head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <a href="http://google.com">GOOGLE</a>
+    <img
+      src="https://www.supercoloring.com/sites/default/files/styles/coloring_medium/public/cif/2022/01/cartoon-cat-coloring-page_1.png"
+      alt="pisica"
+    />
+    <script src="app.js"></script>
+  </body>
 </html>
