--- a/Exercises/04 Manipulating CSS Styles/index.html
+++ b/Exercises/04 Manipulating CSS Styles/index.html
@@ -4,7 +4,20 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container"></div>
+    <div class="container">
+      <p>
+        Paragraf caruia ii schimbam dimensiunea fontului Lorem ipsum dolor sit
+        amet consectetur adipisicing elit. Aliquid, optio.
+      </p>
+      <label for="sizes">Selectati o dimensiune de font:</label>
+      <select id="sizes" name="sizes">
+        <option value="20px">20</option>
+        <option value="22px">22</option>
+        <option value="24px">24</option>
+        <option value="26px">26</option>
+      </select>
+    </div>
+
     <script src="app.js"></script>
   </body>
 </html>
