--- a/Exercises/05 Adding and Removing Classes/index.html
+++ b/Exercises/05 Adding and Removing Classes/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
-  <script src="app.js"></script>
-</body>
+  <head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <p>
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto
+      quaerat laudantium delectus repellendus. Fugit eaque sint atque voluptate
+      ad magnam quos harum error qui quod voluptatibus quisquam, quibusdam
+      perspiciatis. Tenetur, necessitatibus. Praesentium maxime reiciendis
+      incidunt, unde error dignissimos? Eligendi, unde nihil, dicta nisi
+      expedita magnam repellat sequi reiciendis id aliquid totam libero
+      exercitationem alias ullam et blanditiis deserunt. Autem accusamus magnam
+      quidem ullam quis doloremque, dolorem, eligendi sit ad quisquam nam
+      perspiciatis perferendis aliquid enim, laborum labore. Asperiores repellat
+      velit voluptate modi quam enim ad reiciendis ab, obcaecati veniam, nemo
+      beatae assumenda error corporis? Ipsam mollitia quam saepe suscipit minus!
+    </p>
+    <div class="afiseaza">Obiect ce va disparea la click pe buton</div>
+    <button>Apasa</button>
+    <script src="app.js"></script>
+  </body>
 </html>
