--- a/Exercises/08 Creating New Elements/index.html
+++ b/Exercises/08 Creating New Elements/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
-  <script src="app.js"></script>
-</body>
+  <head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <ul>
+        Lista mea neordonata populata dinamic
+      </ul>
+    </div>
+    <script src="app.js"></script>
+  </body>
 </html>
