--- a/Exercises/09 Removing Elements/index.html
+++ b/Exercises/09 Removing Elements/index.html
@@ -1,10 +1,32 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
-  <script src="app.js"></script>
-</body>
+  <head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <p class="lista">Paragraf</p>
+      <input type="text" placeholder="Input-text" class="lista" /><br />
+      <button type="submit" class="lista">Buton</button><br />
+      <select class="lista">
+        <option selected>Select1</option>
+        <option>Select2</option></select
+      ><br />
+      <input type="radio" placeholder="radio" name="radio" class="lista" />
+      <label for="radio" class="lista">RadioButton</label><br />
+      <input type="checkbox" placeholder="check" name="check" class="lista" />
+      <label for="check" class="lista">CheckBox</label>
+      <h1 class="lista">H1</h1>
+      <h2 class="lista">H2</h2>
+      <textarea cols="30" rows="2" class="lista">TextArea</textarea>
+    </div>
+    <div class="operare">
+      <select id="lista2" class="lista2"></select>
+      <button type="submit" class="lista2">Sterge elementul selectat</button>
+    </div>
+    <button type="submit" class="lista3">
+      Sterge toate elementele din clasa ".lista"
+    </button>
+    <script src="app.js"></script>
+  </body>
 </html>
