--- a/Exercises/10 Manipulating Input Values/index.html
+++ b/Exercises/10 Manipulating Input Values/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
-  <script src="app.js"></script>
-</body>
+  <head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <label for="numarul1">Primul numar</label>
+      <input type="text" id="numarul1" placeholder="Introduceti primul numar" />
+      <br />
+      <label for="numarul2">Al doilea numar</label>
+      <input
+        type="text"
+        id="numarul2"
+        placeholder="Introduceti al doilea numar"
+      />
+      <br />
+      <span>Suma celor 2 numere este: &nbsp; &nbsp; &nbsp; &nbsp; </span>
+      <button type="submit" id="buton1">Refresh</button><br />
+      <button type="reset" id="buton2">Reset</button>
+    </div>
+    <script src="app.js"></script>
+  </body>
 </html>
